# gentlest_ascent_dynamics_on_manifolds

./: README.md  pylintrc  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
examples/: gad_on_sphere.py  muller_brown.py  muller_brown_regular_surface.py  plot_simple_spherical.py  regular_surface.py  simple_potential.py  simple_sphere.py  utils.py
gentlest_ascent_dynamics_on_manifolds/: __init__.py  coordinates.py  diffusion_map_coordinates.py  diffusion_maps.py  gaussian_process.py  idealized_saddle_dynamics.py  metropolis.py  spherical_sampler.py
gentlest_ascent_dynamics_on_manifolds/tests/: test_idealized_saddle_dynamics.py  test_spherical_sampler.py
