[metadata]
name = gentlest_ascent_dynamics_on_manifolds
version = 0.0.1
summary = Implementation of the Gentlest Ascent Dynamics (GAD) method on manifolds defined by point-clouds.
author = Juan M. Bello-Rivas
author_email = jmbr@jhu.edu
url = https://github.com/jmbr/gentlest_ascent_dynamics_on_manifolds

[options]
packages = gentlest_ascent_dynamics_on_manifolds
python_requires = >=3.8
install_requires =
    absl-py
    clu
    diffrax
    dlpack
    flax
    jax==0.4.2
    matplotlib
    pyqt5
    ml_collections
    numpy
    optax
    scipy
    seaborn
    tensorboard
    tensorflow
    tensorflow_datasets

# [options.entry_points]
# console_scripts =
#     main = gentlest_ascent_dynamics_on_manifolds.main:entry_point

[flake8]
ignore = E402,E111,W503,E121,E125
